--- a/package.json
+++ b/package.json
@@ -12,39 +12,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.1",
-    "@angular/common": "~10.0.1",
-    "@angular/compiler": "~10.0.1",
-    "@angular/core": "~10.0.1",
-    "@angular/forms": "~10.0.1",
-    "@angular/platform-browser": "~10.0.1",
-    "@angular/platform-browser-dynamic": "~10.0.1",
-    "@angular/router": "~10.0.1",
-    "rxjs": "~6.5.4",
-    "tslib": "^2.0.0",
-    "uswds": "^2.7.1",
-    "zone.js": "~0.10.2"
+    "@angular/animations": "~12.2.1",
+    "@angular/common": "~12.2.1",
+    "@angular/compiler": "~12.2.1",
+    "@angular/core": "~12.2.1",
+    "@angular/forms": "~12.2.1",
+    "@angular/platform-browser": "~12.2.1",
+    "@angular/platform-browser-dynamic": "~12.2.1",
+    "@angular/router": "~12.2.1",
+    "rxjs": "~7.3.0",
+    "tslib": "^2.3.1",
+    "uswds": "^2.12.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.0",
-    "@angular/cli": "~10.0.0",
-    "@angular/compiler-cli": "~10.0.1",
-    "@angular/language-service": "~10.0.1",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@angular-devkit/build-angular": "~12.2.1",
+    "@angular/cli": "~12.2.1",
+    "@angular/compiler-cli": "~12.2.1",
+    "@angular/language-service": "~12.2.1",
+    "@types/jasmine": "~3.8.2",
+    "@types/jasminewd2": "~2.0.10",
+    "@types/node": "^16.6.1",
     "angular-cli-ghpages": "^0.6.2",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "~3.8.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "ts-node": "~10.2.0",
+    "tslint": "^6.1.3",
+    "typescript": "~4.3.5"
   }
 }
